# SchwarzschildGeodesics

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: Engine.cpp  Engine.hpp  Entities.hpp  Physics.cpp  Physics.hpp  main.cpp
